--- a/DX11Starter-master/imgui.ini
+++ b/DX11Starter-master/imgui.ini
@@ -14,8 +14,23 @@ Size=311,118
 Collapsed=0
 
 [Window][Stats]
-Pos=60,60
+Pos=11,49
 Size=357,307
+Collapsed=1
+
+[Window][Inspector]
+Pos=20,218
+Size=225,352
+Collapsed=0
+
+[Window][test]
+Pos=242,387
+Size=37,133
+Collapsed=0
+
+[Window][asd]
+Pos=60,60
+Size=72,48
 Collapsed=0
 
 [Table][0xC9935533,3]
