--- a/DX11Starter-master/DX11Starter.vcxproj.filters
+++ b/DX11Starter-master/DX11Starter.vcxproj.filters
@@ -62,6 +62,12 @@
     <ClCompile Include="ImGui\imgui_widgets.cpp">
       <Filter>ImGui\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEntity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DXCore.h">
@@ -107,6 +113,12 @@
       <Filter>ImGui\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BufferStructs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEntity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
