--- a/DX11Starter-master/imgui.ini
+++ b/DX11Starter-master/imgui.ini
@@ -16,10 +16,10 @@ Collapsed=0
 [Window][Stats]
 Pos=11,49
 Size=357,307
-Collapsed=1
+Collapsed=0
 
 [Window][Inspector]
-Pos=20,218
+Pos=12,89
 Size=225,352
 Collapsed=0
 
@@ -31,6 +31,11 @@ Collapsed=0
 [Window][asd]
 Pos=60,60
 Size=72,48
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=12,368
+Size=248,205
 Collapsed=0
 
 [Table][0xC9935533,3]
