--- a/DX11-engine/DX11Starter.vcxproj
+++ b/DX11-engine/DX11Starter.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="BufferStructs.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collider.h" />
+    <ClInclude Include="Component.h" />
     <ClInclude Include="CoolObject.h" />
     <ClInclude Include="DXCore.h" />
     <ClInclude Include="Game.h" />
