trying to recreate portal mechanics

--- a/DX11-engine/DX11Starter.vcxproj
+++ b/DX11-engine/DX11Starter.vcxproj
@@ -154,6 +154,8 @@
     <ClCompile Include="ImGui\imgui_tables.cpp" />
     <ClCompile Include="ImGui\imgui_widgets.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="MagicMirror.cpp" />
+    <ClCompile Include="MagicMirrorManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -185,6 +187,8 @@
     <ClInclude Include="ImGui\imstb_truetype.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Lights.h" />
+    <ClInclude Include="MagicMirror.h" />
+    <ClInclude Include="MagicMirrorManager.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Rigidbody.h" />
