--- a/DX11-engine/DX11Starter.vcxproj.filters
+++ b/DX11-engine/DX11Starter.vcxproj.filters
@@ -240,6 +240,9 @@
     <FxCompile Include="PS_MagicMirrorView.hlsl">
       <Filter>Shaders\MirrorShaders</Filter>
     </FxCompile>
+    <FxCompile Include="PS_SkyboxMirror.hlsl">
+      <Filter>Shaders\MirrorShaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderIncludes.hlsli">
