i am literally losing it

--- a/DX11-engine/DX11Starter.vcxproj.filters
+++ b/DX11-engine/DX11Starter.vcxproj.filters
@@ -249,6 +249,9 @@
     <FxCompile Include="PS_MagicMirrorView_PBR.hlsl">
       <Filter>Shaders\MirrorShaders</Filter>
     </FxCompile>
+    <FxCompile Include="PS_MagicMirror_Culled.hlsl">
+      <Filter>Shaders\MirrorShaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderIncludes.hlsli">
