--- a/DX11-engine/imgui.ini
+++ b/DX11-engine/imgui.ini
@@ -34,8 +34,8 @@ Size=72,48
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=10,49
-Size=551,650
+Pos=0,-17
+Size=537,650
 Collapsed=0
 
 [Table][0xC9935533,3]
