slight progress on rendering mirrors in mirrors

--- a/DX11-engine/imgui.ini
+++ b/DX11-engine/imgui.ini
@@ -34,8 +34,8 @@ Size=72,48
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=0,-17
-Size=556,650
+Pos=16,43
+Size=224,408
 Collapsed=0
 
 [Table][0xC9935533,3]
