--- a/DX11-engine/DX11Starter.vcxproj.filters
+++ b/DX11-engine/DX11Starter.vcxproj.filters
@@ -252,6 +252,9 @@
     <FxCompile Include="VS_ScreenPosition.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="CS_MirrorPlanes.hlsl">
+      <Filter>Shaders\MirrorShaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderIncludes.hlsli">
